--- a/Fool.html
+++ b/Fool.html
@@ -83,7 +83,8 @@
         }
         
         function showFinalMessage() {
-            document.body.innerHTML = '<img src="april.jpg" alt="Cute Cat"><h1>They\'re both the same buttons silly. lol. (I love you tho babe)</h1>';
+            <img src="april.jpg" alt="Cute Cat">
+            document.body.innerHTML = '<h1>They\'re both the same buttons silly. lol. (I love you tho babe)</h1>';
             for (let i = 0; i < 30; i++) {
                 let emoji = document.createElement("div");
                 emoji.textContent = "😂";
